fix: align

--- a/src/components/Footer/styles.module.css
+++ b/src/components/Footer/styles.module.css
@@ -50,4 +50,7 @@ footer {
     .footerContent span {
         display: inline;
     }
+    .footerContent p {
+        margin: 0;
+    }
 }
